# sibils2bioc

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/sibils2bioc/: __init__.py  params.py
tests/: test_simple.py
tests/assets/medline/: bioc_38531008.json  sibils_38531008.json
tests/assets/plazi/: bioc_0046F48C89D29359E1EED032C4FCDC81.json  sibils_0046F48C89D29359E1EED032C4FCDC81.json
tests/assets/pmc/: bioc_PMC10967677.json  sibils_PMC10967677.json
tests/assets/suppdata/: bioc_PMC8365339_DataSheet_1.docx.json  sibils_PMC8365339_DataSheet_1.docx.json
