[project]
name = "sibils2bioc"
version = "0.1.0"
description = "Convert SIBiLS internal format to BioC format"
authors = [
    { name = "jgobeill", email = "48920425+jgobeill@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sibils2bioc"]